--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -8,7 +8,9 @@
   },
   "permissions": [
     "bookmarks",
-    "tabs"
+    "tabs",
+    "scripting",
+    "webNavigation"
   ],
   "host_permissions": [
     "https://home-new-tab.vercel.app/*"
